# Fatal-Frame-1

./: .gitignore  CMakeLists.txt  bit.c  cache.c  cache.h  configure.py  csc.c  deci2.c  deci2.h  defhandler.c  devvif0.c  devvif1.c  devvu0.c  diei.c  diei.h  eecdvd.c  eecdvd.h  eeloadfile.c  eeloadfile.h  ff1.pal.yaml  ff1.us.yaml  filestub.c  filestub.h  glue.c  glue.h  graphdev.c  graphdev.h  init.c  initsys.c  initsys.h  intr.c  intr.h  iopheap.c  iopheap.h  iopreset.c  iopreset.h  ipuinit.c  kprintf.c  kprintf.h  libdma.c  (+32 more)
m_nagaura/reikoku/src/: CMakeLists.txt
m_nagaura/reikoku/src/common/: ul_math.c  ul_math.h  utility.c  utility.h
m_nagaura/reikoku/src/edit/: map_data.h  mde_disp.h  mde_file.h  mde_fmnu.h  mde_main.c  mde_main.h  mde_mdsp.h  mde_menu.h  test_2d.c  test_2d.h
m_nagaura/reikoku/src/graphics/graph2d/: compress.c  compress.h  effect.c  effect.h  effect_ene.c  effect_ene.h  effect_obj.c  effect_obj.h  effect_oth.c  effect_oth.h  effect_rdr.c  effect_rdr.h  effect_scr.c  effect_scr.h  effect_sub.c  effect_sub.h  effect_sub2.c  effect_sub2.h  g2d_debug.c  g2d_debug.h  g2d_main.c  g2d_main.h  message.c  message.h  number.c  number.h  rare_ene.c  rare_ene.h  snapshot.c  snapshot.h  takep_pe.c  takep_pe.h  tim2.h  tim2_new.c  tim2_new.h
m_nagaura/reikoku/src/graphics/graph3d/: gra3d.c  gra3d.h  leditor.c  leditor.h  load3d.c  load3d.h  mirror.c  mirror.h  object.c  object.h  sce_pp3.c  sce_pp3.h  sgcam.c  sgcam.h  sgdma.c  sgdma.h  sglib.c  sglib.h  sglight.c  sglight.h  sgsgd.c  sgsgd.h  sgsu.c  sgsu.h  sgsup.c  sgsup.h  shadow.c  shadow.h
m_nagaura/reikoku/src/graphics/motion/: accessory.c  accessory.h  acs_dat.c  acs_dat.h  anicode.c  anicode.h  mdlact.c  mdlact.h  mdldat.c  mdldat.h  mdlwork.c  mdlwork.h  mim_dat.c  mim_dat.h  mime.c  mime.h  motion.c  motion.h
m_nagaura/reikoku/src/graphics/mov/: movie.c  movie.h
m_nagaura/reikoku/src/graphics/scene/: fod.c  fod.h  scene.c  scene.h  scene_dat.c  scene_dat.h
m_nagaura/reikoku/src/ingame/: ig_glob.c  ig_glob.h  ig_init.c  ig_init.h  ingame.c  ingame.h
m_nagaura/reikoku/src/ingame/camera/: camera.c  camera.h
m_nagaura/reikoku/src/ingame/enemy/: ene_ctl.c  ene_ctl.h  move_ctl.c  move_ctl.h
m_nagaura/reikoku/src/ingame/entry/: ap_bgost.c  ap_bgost.h  ap_dgost.c  ap_dgost.h  ap_fgost.c  ap_fgost.h  ap_ggost.c  ap_ggost.h  ap_pgost.c  ap_pgost.h  ap_rgost.c  ap_rgost.h  ap_sgost.c  ap_sgost.h  ap_zgost.c  ap_zgost.h  entry.c  entry.h  fgst_dat.c  fgst_dat.h  rgst_dat.c  rgst_dat.h
m_nagaura/reikoku/src/ingame/event/: ev_load.c  ev_load.h  ev_main.c  ev_main.h  ev_spcl.c  ev_spcl.h  mv_cmnd.c  mv_cmnd.h  wan_dat.c  wan_dat.h  wan_soul.c  wan_soul.h
m_nagaura/reikoku/src/ingame/info/: inf_disp.c  inf_disp.h
m_nagaura/reikoku/src/ingame/map/: door_conte.c  door_conte.h  door_ctl.c  door_ctl.h  doortype.c  doortype.h  find_ctl.c  find_ctl.h  find_dat.c  find_dat.h  furn_ctl.c  furn_ctl.h  furn_dat.c  furn_dat.h  furn_eff.c  furn_eff.h  item_ctl.c  item_ctl.h  map_area.c  map_area.h  map_ctrl.c  map_ctrl.h  map_htck.c  map_htck.h  rotd_ctl.c  rotd_ctl.h
m_nagaura/reikoku/src/ingame/map/furn_spe/: adj_valg.c  adj_valg.h  fsla_dat.c  fsla_dat.h  fsla_main.c  fsla_main.h  fspe_acs.c  fspe_acs.h  furn_spe.c  furn_spe.h
m_nagaura/reikoku/src/ingame/menu/: gameover.c  gameover.h  ig_album.c  ig_album.h  ig_camra.c  ig_camra.h  ig_file.c  ig_file.h  ig_glst.c  ig_glst.h  ig_map.c  ig_map.h  ig_menu.c  ig_menu.h  ig_option.c  ig_option.h  ig_rank.c  ig_rank.h  ig_spd_menu.c  ig_spd_menu.h  item.c  item.h  item_get.c  item_get.h  pause.c  pause.h  sp_menu.c  sp_menu.h
m_nagaura/reikoku/src/ingame/photo/: photo.c  photo.h  pht_main.c  pht_main.h  pht_make.c  pht_make.h
m_nagaura/reikoku/src/ingame/plyr/: plyr_ctl.c  plyr_ctl.h  time_ctl.c  time_ctl.h  unit_ctl.c  unit_ctl.h
m_nagaura/reikoku/src/main/: gamemain.c  gamemain.h  glob.c  glob.h  main.c  main.h  zeromath.h
m_nagaura/reikoku/src/mc/: mc.c  mc.h  mc_acs.c  mc_acs.h  mc_album.c  mc_album.h  mc_at.c  mc_at.h  mc_disp.c  mc_disp.h  mc_exec.c  mc_exec.h  mc_icon.c  mc_icon.h  mc_main.c  mc_main.h  mc_start.c  mc_start.h
m_nagaura/reikoku/src/os/: backup.c  backup.h  fileload.c  fileload.h  key_cnf.c  key_cnf.h  lost.h  pad.c  pad.h  system.c  system.h
m_nagaura/reikoku/src/os/eeiop/: eeiop.c  eeiop.h  eese.c  eese.h  sd_room.c  sd_room.h  se_cmd.c  se_cmd.h  se_data.c  se_data.h  se_door.c  se_door.h  se_ev.c  se_ev.h  se_event.c  se_event.h  se_foot.c  se_foot.h  se_gst.h  se_plyr.c  se_plyr.h  se_srund.c  se_srund.h  se_trans.c  se_trans.h
m_nagaura/reikoku/src/os/eeiop/adpcm/: ea_autog.c  ea_autog.h  ea_btlmode.c  ea_btlmode.h  ea_cmd.c  ea_cmd.h  (+30 more)
m_nagaura/reikoku/src/outgame/: memory_album.c  memory_album.h  mode_slct.c  mode_slct.h  mot_menu.h  mot_test.h  outgame.c  outgame.h  scn_test.c  scn_test.h  snd_test.h  sound_test.c  sound_test.h  title.c  title.h
m_nagaura/reikoku/src/outgame/btl_mode/: btl_dat.c  btl_dat.h  btl_menu.c  btl_menu.h  btl_mode.c  btl_mode.h
(+120 files in other folders)
